--- a/platformio-ini-files/platformio.common.ini
+++ b/platformio-ini-files/platformio.common.ini
@@ -2,7 +2,6 @@
 ;
 ; PUT YOUR LOCAL CHANGES IN platformio.local.ini
 
-
 ;FujiNet PlatformIO Common Project Configuration File
 ;
 ;   Build options: build flags, source filter
@@ -14,7 +13,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [fujinet]
-esp32_platform_version = 6.3.2
+;esp32_platform_version = 6.3.2
+esp32_platform_version = 6.10.0
 esp32_platform_packages = 
 
 ; SPIFFS/LITTLEFS
