--- a/platformio-sample.ini
+++ b/platformio-sample.ini
@@ -19,7 +19,8 @@
 ; Espressif32 PlatformIO Version to use for building
 ;esp32_platform_version = 3.2.0 ; For Bluetooth support
 ;esp32_platform_version = 3.4.0 ; old stable
-esp32_platform_version = 6.3.2 ; latest
+;esp32_platform_version = 6.3.2 ; last stable
+esp32_platform_version = 6.10.0 ; latest
 esp32_platform_packages = 
 ;    toolchain-riscv32-esp @ 8.4.0+2021r2-patch5 ; required for platform version < 5.3.0, remove this line when upgrading to the >=5.3.0
 esp32s3_platform_version = 6.3.2
